--- a/index.html
+++ b/index.html
@@ -102,6 +102,14 @@
 </div>
 
 <script>
+/*To do
+Add problem solver stuff
+Add easy mode
+Check along the way for compatibility of modes
+Add how to page
+Ask for beta-testers basically
+Phone compatibility?
+*/
 var canvas = document.getElementById("canvas");
 var ctx = canvas.getContext("2d");
 ctx.font = "30px Arial";
@@ -157,16 +165,30 @@ for(var i = 0; i < 10; ++i){
 	}
 }
 
-//Initialize other variables
+//Initialize mode variables
 var solution_shown = false;
 var guessing = false;
+var entering = false;
 
-ctx.globalAlpha = 0.2; //Draw side gray bar
+//Draw gray side bar
+ctx.globalAlpha = 0.2;
 ctx.fillStyle="#000000";
 ctx.fillRect(600,0,350,550);
 ctx.globalAlpha = 1;
 
 function draw_board(){ //Draws the grid and the ships on the side
+for(var a = 0; a < 2; ++a){
+battleship_detected = false;
+cruiser1_detected = false;
+cruiser2_detected = false;
+destroyer1_detected = false;
+destroyer2_detected = false;
+destroyer3_detected = false;
+submarine1_detected = false;
+submarine2_detected = false;
+submarine3_detected = false;
+submarine4_detected = false;
+
 ctx.clearRect(10,10,550,550);
 ctx.rect(10,10,500.5,500.5);
 ctx.fill();
@@ -459,7 +481,8 @@ ctx.beginPath();
 ctx.arc((15+1)*50 - 15,(3+1)*50 - 15,20,0,2*Math.PI,false);
 ctx.fill();
 
-ctx.fillStyle="#000000";	
+ctx.fillStyle="#000000";
+}	
 }
 
 function check(row,col,dir,size){ //When creating a board checks surrounding spaces of ship
@@ -705,6 +728,7 @@ function display_problem(){//Displays the problem
 				work[i][j] = -1;
 				problem[i][j] = -1;
 			}
+			guess[i][j] = -1;
 		}
 	}
 }
@@ -726,6 +750,55 @@ draw_board();
 			ctx.globalAlpha = 1;
 			ctx.fillStyle="#000000";
 		}
+		}
+	}
+}
+
+function enter_problem(x,y){ //User entered board
+if(x > -1 && y > -1){
+	if(x < 10 && y < 10){ //Update board
+		if(work[x][y] < 6){
+			++work[x][y];
+		}
+		else{
+			work[x][y] = -1;
+		}
+	}
+	else if (x > 9 && y < 10){//Update row totals
+		if(row_tot[y] < 8){
+			++row_tot[y];
+		}
+		else{
+			row_tot[y] = 0;
+		}
+	}
+	else if (y > 9 && x < 10){//Update col totals
+		if(col_tot[x] < 8){
+			++col_tot[x];
+		}
+		else{
+			col_tot[x] = 0;
+		}
+	}
+}
+ctx.clearRect(10,10,550,550);
+ctx.rect(10,10,500.5,500.5);
+ctx.fill();
+for (var i = 0; i < 10; i++) { //Draw grid
+		for(var j = 0; j < 10; j++){
+			ctx.beginPath();
+			ctx.fillStyle="#FFFFFF";
+			ctx.rect(50*i + 11,50*j + 11,48.5,48.5);
+			ctx.fill();
+			ctx.closePath();
+			ctx.fillStyle="#000000";
+		}
+	}
+	for(var i = 0; i < 10; ++i){
+		ctx.fillText(row_tot[i],525,50*i+50);
+		ctx.fillText(col_tot[i],50*i + 25,540);
+		for(var j = 0; j < 10; ++j){
+			decode_display(work[i][j],i,j);
 		}
 	}
 }
@@ -752,25 +825,25 @@ function decode_work(row,col){ //Update the work screen to match expected ship p
 	if(row !== 0){
 		up = work[row - 1][col];
 		if(up === 7){
-			up = board[row - 1][col];
+			up = problem[row - 1][col];
 		}
 	}
 	if(row !== 9){
 		down = work[row + 1][col];
 		if(down === 7){
-			down = board[row + 1][col];
+			down = problem[row + 1][col];
 		}
 	}
 	if(col !== 0){
 		left = work[row][col - 1];
 		if(left === 7){
-			left = board[row][col - 1];
+			left = problem[row][col - 1];
 		}
 	}
 	if(col !== 9){
 		right = work[row][col + 1];
 		if(right === 7){
-			right = board[row][col + 1];
+			right = problem[row][col + 1];
 		}
 	}
 	//Begin decode
@@ -803,7 +876,7 @@ function decode_work(row,col){ //Update the work screen to match expected ship p
 }
 
 function update_display(x,y){//Update the view of the board
-	if(x > -1 && x < 10 && y > -1 && y < 10 && work[x][y] !== 7){
+	if(x > -1 && x < 10 && y > -1 && y < 10 && work[x][y] !== 7 && !solution_shown){
 		if(dragging){//Dragging mode
 			if(drag_value === 9){
 				if(work[x][y] === -1){
@@ -869,7 +942,7 @@ function update_display(x,y){//Update the view of the board
 
 canvas.addEventListener('mousemove', function(evt1){ //When moved
 var mousePos = getMousePos(canvas, evt1);
-if(mouse_down && !mouse_up && !guessing){
+if(mouse_down && !mouse_up && !guessing && !entering){
 	dragging = true;
 	update_display(mousePos.x,mousePos.y);
 }
@@ -880,7 +953,10 @@ var mousePos = getMousePos(canvas, evt2);
 mouse_down = false;
 mouse_up = true;
 drag_value = 9;
-if(!dragging){
+if(entering && !dragging){
+enter_problem(mousePos.x,mousePos.y);
+}
+else if(!dragging){
 update_display(mousePos.x,mousePos.y);
 }
 dragging = false;
@@ -903,6 +979,9 @@ function mode_change(mode){ //Compartmentalizes different modes
 			guessing = false;
 			color_change('button3');
 		}
+		if(entering){
+			entering = false;
+		}
 		break;
 		
 		case 'Solution': //Shows the solution and mistakes
@@ -914,6 +993,9 @@ function mode_change(mode){ //Compartmentalizes different modes
 			guessing = false;
 			color_change('button3');
 		}
+		if(entering){
+			entering = false;
+		}
 		break;
 		
 		case 'Solver': //Solves the problem as far as possible using the programmed logic
@@ -924,6 +1006,9 @@ function mode_change(mode){ //Compartmentalizes different modes
 			guessing = false;
 			color_change('button3');
 		}
+		if(entering){
+			entering = false;
+		}
 		break;
 		
 		case 'Enter': //Allows user to enter their own problems
@@ -932,6 +1017,24 @@ function mode_change(mode){ //Compartmentalizes different modes
 			guessing = false;
 			color_change('button3');
 		}
+		if(!entering){
+			entering = true;
+		}
+		ctx.clearRect(10,10,550,550);
+		for(var i = 0;i < 10; ++i){//clear other boards
+		row_tot[i] = 0;
+		col_tot[i] = 0;
+			for(var j = 0; j < 10; ++j){
+				problem[i][j] = -1;
+				answer[i][j] = -1;
+				work[i][j] = -1;
+				guess[i][j] = -1;
+			}
+		}
+		for(var i = 0; i < 7; ++i){
+			hints[i] = -1;
+		}
+		draw_board();
 		break;
 		
 		case 'Restart': //Restarts current problem
@@ -940,6 +1043,9 @@ function mode_change(mode){ //Compartmentalizes different modes
 		if(guessing){
 			guessing = false;
 			color_change('button3');
+		}
+		if(entering){
+			entering = false;
 		}
 		break;
 		
@@ -952,6 +1058,9 @@ function mode_change(mode){ //Compartmentalizes different modes
 			else{
 				guessing = true;
 			}
+		}
+		if(entering){
+			entering = false;
 		}
 		break;
 	}
