Added Help Page

--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
   left:65%;
   top:82%
 }
+#button7 {
+  position:absolute;
+  left:65%;
+  top:89%
+}
 
 </style>
 </head>
@@ -98,6 +103,9 @@
 <button class = "button" id="button4" onclick="mode_change('Solver');">Puzzle Solver</button>
 <button class = "button" id="button5" onclick="mode_change('Enter');">Enter Problem</button>
 <button class = "button" id="button6" onclick="mode_change('Restart');">Restart Problem</button>
+<a href="help.html">
+<button class = "button" id="button7">Help</button>
+</a>
  </div>
 </div>
 
