Made help page button prettier

--- a/help.html
+++ b/help.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>Help</title>
 <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -15,7 +16,7 @@
     -ms-user-select: none; /* IE10+ */
 }
 
-.btn-group .button {
+.button {
     background: rgb(76, 175, 80); /* Green */
     border: 1px solid green;
     color: white;
@@ -30,74 +31,16 @@
     display: block;
 }
 
-.btn-group .button:not(:last-child) {
-    border-bottom: none; /* Prevent double borders */
-}
-
-.btn-group .button:hover {
-    background: rgb(62, 142, 65);
-}
-
-.canvas-container{
-  position: relative;
-  width: 950px;
-  height: 550px;
-}
-#canvas {
-  position: absolute;
-  background-color:lightgrey
-}
-#button0 {
-  position:absolute;
-  left:65%;
-  top:40%
-}
-#button1 {
-  position:absolute;
-  left:65%;
-  top:47%
-}
-#button2 {
-  position:absolute;
-  left:65%;
-  top:54%
-}
-#button3 {
-  position:absolute;
-  left:65%;
-  top:61%
-}
-#button4 {
-  position:absolute;
-  left:65%;
-  top:68%
-}
-#button5 {
-  position:absolute;
-  left:65%;
-  top:75%
-}
-#button6 {
-  position:absolute;
-  left:65%;
-  top:82%
-}
-#button7 {
-  position:absolute;
-  left:65%;
-  top:89%
+.button:hover {
+   background: rgb(62, 142, 65);
 }
 
 </style>
 </head>
 <body>
 <p>Help page under construction lol...</p>
-<div class="canvas-container">
- <div class = "btn-group">
 <a href = "index.html">
-<button class = "button" id="button">Return</button>
+<button class = "button">Return</button>
 </a>
-</div>
-</div>
 </body>
 </html>
