Added meat to the help page

--- a/help.html
+++ b/help.html
@@ -38,9 +38,20 @@
 </style>
 </head>
 <body>
-<p>Help page under construction lol...</p>
-<a href = "index.html">
-<button class = "button">Return</button>
-</a>
+<h1>Still working on the basics of the site :)</h1>
+<p>Problems in order of importance/what I'm working on</p>
+
+<ol>
+<li>Add Problem Solver Mode</li>
+<li>Add Easy Problem Mode</li>
+<li>Lots of bug testing to make sure modes are compatible</li>
+<li>Add actual tutorial here lol...</li>
+<li>Increase Problem Solver Logic and work on making harder puzzles (Test with magazine/online puzzles.)</li>
+<li>Potentially look into different ways of creating puzzles</li>
+<li>Beta-test multiple times and on other platforms and get feed back from other people</li>
+</ol>
+
+<p> If you have any suggestions please text me/tell me in person what I can do! </p>
+<a href = "index.html"><button class = "button">Return</button></a>
 </body>
 </html>
