--- a/help.html
+++ b/help.html
@@ -52,10 +52,12 @@
 </ol>
 
 <p> If you have any suggestions please text me/tell me in person what I can do! </p>
-<a href = "index.html"><button class = "button">Return</button></a>
+<a style="text-decoration:none" href = "index.html"><button class = "button">Return</button></a>
+
 <div style="position: relative">
-                <p style="position: fixed; bottom: 0; width:100%; text-align: center"> Updated 3/26/2018
-                </p>
+<p style="position: fixed; bottom: 0; width:100%; text-align: center"> Updated 3/26/2018
+</p>
 </div>
+
 </body>
 </html>
