Added level 1 difficulty
Got rid of random problem/hints altogether.
Made default level 1 problem.
Greatly improved problem creation efficiency.

--- a/help.html
+++ b/help.html
@@ -42,20 +42,16 @@
 <p>Problems in order of importance/what I'm working on</p>
 
 <ol>
-<li>Add Problem Solver Mode</li>
-<li>Add Easy Problem Mode</li>
-<li>Lots of bug testing to make sure modes are compatible</li>
 <li>Add actual tutorial here lol...</li>
-<li>Increase Problem Solver Logic and work on making harder puzzles (Test with magazine/online puzzles.)</li>
-<li>Potentially look into different ways of creating puzzles</li>
-<li>Beta-test multiple times and on other platforms and get feed back from other people</li>
+<li>Increase Intelligence of Problem Solver Mode and then add more levels of difficulty</li>
+<li>General bug testing and testing on other devices/with other people</li>
 </ol>
 
 <p> If you have any suggestions please text me/tell me in person what I can do! </p>
 <a style="text-decoration:none" href = "index.html"><button class = "button">Return</button></a>
 
 <div style="position: relative">
-<p style="position: fixed; bottom: 0; width:100%; text-align: center"> Updated 3/26/2018
+<p style="position: fixed; bottom: 0; width:100%; text-align: center"> Updated 3/27/2018
 </p>
 </div>
 
