--- a/help.html
+++ b/help.html
@@ -38,22 +38,31 @@
 </style>
 </head>
 <body>
-<h1>Still working on the basics of the site :)</h1>
-<p>Problems in order of importance/what I'm working on</p>
+<h1 style = "text-align:center">How to Play Battleships</h1>
 
-<ol>
-<li>Add actual tutorial here lol...</li>
-<li>Increase Intelligence of Problem Solver Mode and then add more levels of difficulty</li>
-<li>General bug testing and testing on other devices/with other people</li>
-</ol>
-
-<p> If you have any suggestions please text me/tell me in person what I can do! </p>
-<a style="text-decoration:none" href = "index.html"><button class = "button">Return</button></a>
-
-<div style="position: relative">
-<p style="position: fixed; bottom: 0; width:100%; text-align: center"> Updated 3/27/2018
+<p>This version Battleships is a mix between the classic Battleships game and Sudoku.
+<br />The purpose of the game is to fill up the board with water and ships so that the location of every ship is known.
 </p>
+<div style="text-align: center">
+<p>
+<img src="Problem.png" style="width:200px;height:200px;">
+&emsp;&emsp;
+<img src="Answer.png" style="width:200px;height:200px;">
+</p>
+<p>Initial Problem &emsp; &emsp; &emsp; &emsp; &emsp; Completed Board</p>
 </div>
+<p>There a 4 different types of ships:</p>
+<p> <img src="Battleship.png" style="width:200px;height:50px;">&emsp;One Battleship </p>
+<p> <img src="Cruiser.png" style="width:150px;height:50px;">&emsp;Two Cruisers</p>
+<p> <img src="Destroyer.png" style="width:100px;height:50px;">&emsp;Three Destroyers</p>
+<p> <img src="Submarine.png" style="width:50px;height:50px;">&emsp;Four Submarines</p>
+<p>One last rule is that no part of a ship may touch adjacently nor diagonally with another ship.</p>
+<p>
+<a style="text-decoration:none;" href = "index.html"><button class = "button">Return</button></a>
+I'm still trying to update the difficulty of puzzles and add new levels.
+<br />If you have any suggestions please text me/tell me in person what I can do!
+<br />Updated 3/27/2018
+</p>
 
 </body>
 </html>
