Small Tutorial Addition

--- a/help.html
+++ b/help.html
@@ -56,6 +56,7 @@
 <p> <img src="Cruiser.png" style="width:150px;height:50px;">&emsp;Two Cruisers</p>
 <p> <img src="Destroyer.png" style="width:100px;height:50px;">&emsp;Three Destroyers</p>
 <p> <img src="Submarine.png" style="width:50px;height:50px;">&emsp;Four Submarines</p>
+<p>The numbers on the side of the rows and columns indicate the number of pieces of a ship in that specific row or column.</p>
 <p>One last rule is that no part of a ship may touch adjacently nor diagonally with another ship.</p>
 <p>
 <a style="text-decoration:none;" href = "index.html"><button class = "button">Return</button></a>
