--- a/help.html
+++ b/help.html
@@ -56,8 +56,10 @@
 <p> <img src="Cruiser.png" style="width:150px;height:50px;">&emsp;Two Cruisers</p>
 <p> <img src="Destroyer.png" style="width:100px;height:50px;">&emsp;Three Destroyers</p>
 <p> <img src="Submarine.png" style="width:50px;height:50px;">&emsp;Four Submarines</p>
-<p> The numbers on the side of the rows and columns indicate the number of pieces of a ship in that specific row or column.</p>
-<p>One last rule is that no part of a ship may touch adjacently nor diagonally with another ship.</p>
+<p> The numbers on the side of the rows and columns indicate the number of pieces of a ship in that specific row or column.
+	<br />One last rule is that no part of a ship may touch adjacently nor diagonally with another ship.
+	<br />Click on an empty square to turn it into water and click again to turn it into a ship piece
+</p>
 <p>
 <a style="text-decoration:none;" href = "index.html"><button class = "button">Return</button></a>
 I'm still trying to update the difficulty of puzzles and add new levels.
